--- a/catkin_ws/src/arena_web_server/templates/index.html
+++ b/catkin_ws/src/arena_web_server/templates/index.html
@@ -36,9 +36,13 @@
                         <p>View to watch the robot's pose</p>
                     </div>
                   </div>
-                  <!--div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Third slide">
-                  </div-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="http://localhost:8080/stream?topic=/tracked_image" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obstacle detection</h5>
+                        <p>View to watch obstacles by color tracked</p>
+                    </div>
+                  </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
