Update arena_web_server pkg

--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -97,12 +97,12 @@
                                                     </div>
                                                     <div class="check-container1">
                                                         <div class="form-check1">
-                                                            <input class="form-check-input1" type="checkbox" onchange="handleChecked(this)" value="" id="checkLight1">
-                                                            <label class="form-check-label" for="checkLight1">Turn on light 1</label>
+                                                            <input class="form-check-input1" type="checkbox" onchange="handleChecked(this)" value="" id="bulb_1">
+                                                            <label class="form-check-label" for="bulb_1">Turn on light 1</label>
                                                         </div>
                                                         <div class="form-check1">
-                                                            <input class="form-check-input1" type="checkbox" onchange="handleChecked(this)" value="" id="checkLight2">
-                                                            <label class="form-check-label" for="checkLight2">Turn on light 2</label>
+                                                            <input class="form-check-input1" type="checkbox" onchange="handleChecked(this)" value="" id="bulb_2">
+                                                            <label class="form-check-label" for="bulb_2">Turn on light 2</label>
                                                         </div>
                                                     </div>
                                                 </div>
