--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -149,7 +149,7 @@
                                                 <div>
                                                     <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
                                                         <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
-                                                        <button id="uploadButton" type="button" onclick="uploadFile()">Upload</button>
+                                                        <button id="uploadButton" disabled type="button" onclick="uploadFile()">Upload</button>
                                                     </form>    
                                                 </div>
                                             </div>
