--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -117,10 +117,10 @@
                                                     <h5>Algorithms</h5>
                                                 </div>
                                                 <div class="d-flex flex-column h-75 justify-content-center">
-                                                    <button class="mb-1">Run algorithm</button>
-                                                    <button class="mb-1">Run and record</button>
-                                                    <button class="mb-1">Stop algorithm</button>
-                                                    <button class="mb-1">Return home</button>
+                                                    <button disabled class="mb-1">Run algorithm</button>
+                                                    <button disabled class="mb-1">Run and record</button>
+                                                    <button disabled class="mb-1">Stop algorithm</button>
+                                                    <button disabled class="mb-1">Return home</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -149,7 +149,14 @@
                                                 <div>
                                                     <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
                                                         <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
-                                                        <button id="uploadButton" disabled type="button" onclick="uploadFile()">Upload</button>
+                                                        <div class="row">
+                                                            <div class="col-6">
+                                                                <button id="uploadButton" disabled type="button" class="w-100" onclick="uploadFile()">Upload</button>
+                                                            </div>
+                                                            <div class="col-6">
+                                                                <button id="clearButton" disabled type="button"  class="w-100" onclick="clearFileInput()">Clear</button>        
+                                                            </div>
+                                                        </div>
                                                     </form>    
                                                 </div>
                                             </div>
@@ -223,6 +230,19 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+            <div id="uploadToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+              <div class="toast-header">
+                <!-- <img src="..." class="rounded me-2" alt="..."> -->
+                <strong class="me-auto">Alert</strong>
+                <!-- <small>11 mins ago</small> -->
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+              </div>
+              <div class="toast-body">
+                Hello, world! This is a toast message.
+              </div>
             </div>
         </div>
     </main>
