--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -84,15 +84,15 @@
                                                     </div>
                                                     <div class="container mb-4">
                                                         <div class="container-fluid d-flex justify-content-center">
-                                                            <button onclick="controlCommand('moveAhead')">^</button>
+                                                            <button onclick="moveRobotCommand('moveAhead')">^</button>
                                                         </div>
                                                         <div class="d-flex justify-content-center">
-                                                            <button onclick="controlCommand('moveLeft')"><</button>
-                                                            <button onclick="controlCommand('stop')">||</button>
-                                                            <button onclick="controlCommand('moveRight')">></button>
+                                                            <button onclick="moveRobotCommand('moveLeft')"><</button>
+                                                            <button onclick="moveRobotCommand('stop')">||</button>
+                                                            <button onclick="moveRobotCommand('moveRight')">></button>
                                                         </div>
                                                         <div class="d-flex justify-content-center">
-                                                            <button onclick="controlCommand('moveBack')">v</button>
+                                                            <button onclick="moveRobotCommand('moveBack')">v</button>
                                                         </div>
                                                     </div>
                                                     <div class="check-container1">
