--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -73,6 +73,52 @@
                             <!-- Controls -->
                             <div class="col-md-12 col-lg-6 mb-3">
                                 <div class="row g-3">
+                                    <!-- Robot status -->
+                                    <div class="col-12 col-md-6">
+                                        <div class="card h-100">
+                                            <div class="card-body d-flex flex-column justify-content-between">
+                                                <h5>Robot status</h5>
+                                                <p>Robot selected: 1</p>
+                                                <strong>Select program from list:</strong>
+                                                <select aria-placeholder="qwert" class="form-select form-select-sm" aria-label="Default select example">
+                                                    <!-- <option value>Open this select menu</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option> -->
+                                                    {% for programFile in programFiles %}
+                                                        <option value="programFile">{{ programFile }}</option>
+                                                    {% endfor %}
+                                                  </select>
+                                                <strong>Battery status:</strong>
+                                                <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                                    <div style="width: 100%">100%</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- File manager -->
+                                    <div class="col-12 col-md-6">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <div class="d-flex">
+                                                    <h5>File manager</h5>
+                                                </div>
+                                                <div>
+                                                    <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
+                                                        <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
+                                                        <div class="row">
+                                                            <div class="col-6">
+                                                                <button id="uploadButton" disabled type="button" class="w-100" onclick="uploadFile()">Upload</button>
+                                                            </div>
+                                                            <div class="col-6">
+                                                                <button id="clearButton" disabled type="button"  class="w-100" onclick="clearFileInput()">Clear</button>        
+                                                            </div>
+                                                        </div>
+                                                    </form>    
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <!-- Basic controls -->
                                     <div class="col-12 col-md-6">
                                         <div class="card h-100">
@@ -109,7 +155,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- Algorithms -->
+                                    <!-- Runnable -->
                                     <div class="col-12 col-md-6">
                                         <div class="card h-100">
                                             <div class="card-body">
@@ -119,50 +165,13 @@
                                                 <div class="d-flex flex-column h-75 justify-content-center">
                                                     <button onclick="runCommand('run')" class="mb-1">Run algorithm</button>
                                                     <button onclick="runCommand('runAndRecord')" class="mb-1">Run and record</button>
-                                                    <button onclick="runCommand('stopRunning')" class="mb-1">Stop algorithm</button>
+                                                    <button disabled onclick="runCommand('stopRunning')" class="mb-1">Stop algorithm</button>
                                                     <button onclick="runCommand('returnHome')" class="mb-1">Return home</button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- Robot status -->
-                                    <div class="col-12 col-md-6">
-                                        <div class="card h-100">
-                                            <div class="card-body d-flex flex-column justify-content-between">
-                                                <div>
-                                                    <h5>Robot status</h5>
-                                                    <p class="mx-auto">Robot selected: 1</p>
-                                                    <p class="mx-auto">Algorithm id: 2</p>
-                                                </div>
-                                                <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                                                    <div style="width: 100%">100%</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- File manager -->
-                                    <div class="col-12 col-md-6">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <div class="d-flex">
-                                                    <h5>File manager</h5>
-                                                </div>
-                                                <div>
-                                                    <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
-                                                        <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
-                                                        <div class="row">
-                                                            <div class="col-6">
-                                                                <button id="uploadButton" disabled type="button" class="w-100" onclick="uploadFile()">Upload</button>
-                                                            </div>
-                                                            <div class="col-6">
-                                                                <button id="clearButton" disabled type="button"  class="w-100" onclick="clearFileInput()">Clear</button>        
-                                                            </div>
-                                                        </div>
-                                                    </form>    
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </div>
                             </div>
                             <!-- Table -->
@@ -183,17 +192,17 @@
                                     <!-- Records -->
                                     <tbody>
                                         {% for programFile in programFiles %}
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>{{ programFile }}</td>
-                                            <td>Avoid obstacles</td>
-                                            <td>Compiled</td>
-                                            <td>
-                                                <button onclick="showToast('Compilation', 'File compiled successfully')">Compile</button>
-                                            </td>
-                                            <td>22/03/1999 5:06:07 AM</td>
-                                        </tr>
+                                            <tr>    
+                                                <th scope="row">1</th>
+                                                <td>Mark</td>
+                                                <td>{{ programFile }}</td>
+                                                <td>Avoid obstacles</td>
+                                                <td>Compiled</td>
+                                                <td>
+                                                    <button onclick="showToast('Compilation', 'File compiled successfully')">Compile</button>
+                                                </td>
+                                                <td>22/03/1999 5:06:07 AM</td>
+                                            </tr>
                                         {% endfor %}
                                     </tbody>
                                 </table>
