--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Styles -->
-    <!--link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <main style="background-color: #eff2f6;">
@@ -78,17 +78,8 @@
                                         <div class="card h-100">
                                             <div class="card-body d-flex flex-column justify-content-between">
                                                 <h5>Robot status</h5>
-                                                <p>Robot selected: 1</p>
-                                                <strong>Select program from list:</strong>
-                                                <select aria-placeholder="qwert" class="form-select form-select-sm" aria-label="Default select example">
-                                                    <!-- <option value>Open this select menu</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option> -->
-                                                    {% for programFile in programFiles %}
-                                                        <option value="programFile">{{ programFile }}</option>
-                                                    {% endfor %}
-                                                  </select>
+                                                <p><strong>Robot selected: </strong>1</p>
+                                                <p><strong>Algorithm to test: </strong>Light follower</p>
                                                 <strong>Battery status:</strong>
                                                 <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                                     <div style="width: 100%">100%</div>
@@ -103,19 +94,15 @@
                                                 <div class="d-flex">
                                                     <h5>File manager</h5>
                                                 </div>
-                                                <div>
-                                                    <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
-                                                        <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
-                                                        <div class="row">
-                                                            <div class="col-6">
-                                                                <button id="uploadButton" disabled type="button" class="w-100" onclick="uploadFile()">Upload</button>
-                                                            </div>
-                                                            <div class="col-6">
-                                                                <button id="clearButton" disabled type="button"  class="w-100" onclick="clearFileInput()">Clear</button>        
-                                                            </div>
-                                                        </div>
-                                                    </form>    
+                                                <div class="mb-2">
+                                                    <button data-bs-toggle="modal" data-bs-target="#exampleModalCenter">Upload program file</button>
                                                 </div>
+                                                <strong>Select program from list:</strong>
+                                                <select aria-placeholder="qwert" class="form-select form-select-sm" aria-label="Default select example">
+                                                    {% for programFile in programFiles %}
+                                                        <option value="programFile">{{ programFile }}</option>
+                                                    {% endfor %}
+                                                  </select>
                                             </div>
                                         </div>
                                     </div>
@@ -175,7 +162,7 @@
                                 </div>
                             </div>
                             <!-- Table -->
-                            <div class="row mx-auto">
+                            <div class="table-responsive">
                                 <table class="table">
                                     <!-- Columns -->
                                     <thead>
@@ -213,6 +200,36 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header justify-content-between">
+                  <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadForm" class="form-uploader d-flex flex-column" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="d-flex">
+                                <label for="algorithmInput" class="w-50">Algorithm type: </label>
+                                <input type="text" class="form-control mb-3" id="algorithmInput" aria-describedby="algorithmInput" placeholder="Enter algorithm type">
+                            </div>
+
+                                <input id="inputUploader" name="file" onchange="fileUploaderChanged()" type="file" class="form-control mb-3" />
+                          </div>
+                    </form>    
+                </div>
+                <div class="modal-footer">
+                  <button id="closeModalButton" type="button" class="btn btn-secondary" onclick="clearFileInput()" data-bs-dismiss="modal">Close</button>
+                  <button id="uploadButton" type="button" class="btn btn-primary" onclick="uploadFile()" data-bs-dismiss="modal">Save program file</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Toast alert -->
         <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
             <div id="uploadToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
               <div class="toast-header">
