--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -96,11 +96,12 @@
                                                 </div>
                                                 <div class="mb-2">
                                                     <button data-bs-toggle="modal" data-bs-target="#exampleModalCenter">Upload program file</button>
+                                                    <!-- <button onclick="updateTable()" class="mb-1">Update table</button> -->
                                                 </div>
                                                 <strong>Select program from list:</strong>
                                                 <select aria-placeholder="qwert" class="form-select form-select-sm" aria-label="Default select example">
                                                     {% for programFile in programFiles %}
-                                                        <option value="programFile">{{ programFile }}</option>
+                                                        <option value="programFile">{{ programFile.id }} | {{ programFile.algorithm }} </option>
                                                     {% endfor %}
                                                   </select>
                                             </div>
@@ -163,7 +164,7 @@
                             </div>
                             <!-- Table -->
                             <div class="table-responsive">
-                                <table class="table">
+                                <table id="table" class="table">
                                     <!-- Columns -->
                                     <thead>
                                         <tr>
@@ -180,15 +181,15 @@
                                     <tbody>
                                         {% for file in programFiles %}
                                             <tr>    
-                                                <th scope="row">1</th>
-						<td>{{ file.username }}</td>
-                                                <td>{{ file.document_name }}</td>
-						<td>{{ file.algorithm }}</td>
-						<td>{{ file.status }}</td>
-                                                <td>
+                                                <th scope="row">{{ file.id }}</th>
+                                                <th scope="row">{{ file.username }}</td>
+                                                <th scope="row">{{ file.document_name }}</td>
+						                        <th scope="row">{{ file.algorithm }}</td>
+						                        <th scope="row">{{ file.status }}</td>
+                                                <th scope="row">
                                                     <button onclick="showToast('Compilation', 'File compiled successfully')">Compile</button>
                                                 </td>
-						<td>{{ file.upload_date }}</td>
+						                        <th scope="row">{{ file.upload_date }}</td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
