--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -17,6 +17,22 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+            <a class="navbar-brand ps-4" href="https://biorobotics.fi-p.unam.mx/">Biorobotics Lab</a>
+            <div class="d-flex w-100 justify-content-end">   
+                <div class="d-flex">
+                    <span class="navbar-brand me-1">User: Admin</span>
+                    <div class="d-flex align-items-center">
+                        <svg class="navbar-brand" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+          </nav>
+    </header>
     <main style="background-color: #eff2f6;">
         <div class="container-fluid">
             <div class="row flex-nowrap">
@@ -79,7 +95,7 @@
                                             <div class="card-body d-flex flex-column justify-content-between">
                                                 <h5>Robot status</h5>
                                                 <p><strong>Robot selected: </strong>1</p>
-                                                <p><strong>Algorithm to test: </strong>Light follower</p>
+                                                <!-- <p><strong>Algorithm to test: </strong>Light follower</p> -->
                                                 <strong>Battery status:</strong>
                                                 <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                                     <div style="width: 100%">100%</div>
@@ -101,7 +117,7 @@
                                                 <strong>Select program from list:</strong>
                                                 <select aria-placeholder="qwert" class="form-select form-select-sm" aria-label="Default select example">
                                                     {% for programFile in programFiles %}
-                                                        <option value="programFile">{{ programFile.id }} | {{ programFile.algorithm }} </option>
+                                                        <option value="programFile">#{{ programFile.id }} | {{ programFile.algorithm }} </option>
                                                     {% endfor %}
                                                   </select>
                                             </div>
