Update web_server_ndoe Add session

--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -22,12 +22,13 @@
             <a class="navbar-brand ps-4" href="https://biorobotics.fi-p.unam.mx/">Biorobotics Lab</a>
             <div class="d-flex w-100 justify-content-end">   
                 <div class="d-flex">
-                    <span class="navbar-brand me-1">User: Admin</span>
-                    <div class="d-flex align-items-center">
-                        <svg class="navbar-brand" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <span class="navbar-brand m-auto me-3"><strong>User: </strong>{{ user }}</span>
+                    <div class="d-flex align-items-center flex-column me-4">
+                        <svg class="navbar-brand m-auto" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                         </svg>
+                        <a href="/logout">Logout</a>
                     </div>
                 </div>
             </div>
