--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </head>
 <body>
     <header>
@@ -95,11 +96,18 @@
                                         <div class="card h-100">
                                             <div class="card-body d-flex flex-column justify-content-between">
                                                 <h5>Robot status</h5>
-                                                <p><strong>Robot selected: </strong>1</p>
+                                                <p>
+                                                    <strong>Robot selected: </strong>1
+                                                </p>
                                                 <!-- <p><strong>Algorithm to test: </strong>Light follower</p> -->
-                                                <strong>Battery status:</strong>
-                                                <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                                 <p class="d-flex">
+                                                    <strong>Battery status: </strong>
+                                                 </p>
+                                                <!-- <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                                     <div style="width: 100%">100%</div>
+                                                </div> -->
+                                                <div class="progress">
+                                                    <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                                                 </div>
                                             </div>
                                         </div>
