Fix database queries

--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -207,7 +207,7 @@
                                             <tr>    
                                                 <th scope="row">{{ file.id }}</th>
                                                 <th scope="row">{{ file.username }}</td>
-                                                <th scope="row">{{ file.document_name }}</td>
+                                                <th scope="row">{{ file.file_name }}</td>
 						                        <th scope="row">{{ file.algorithm }}</td>
 						                        <th scope="row">{{ file.status }}</td>
                                                 <th scope="row">
