Add battery_percent controller

--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -96,18 +96,12 @@
                                         <div class="card h-100">
                                             <div class="card-body d-flex flex-column justify-content-between">
                                                 <h5>Robot status</h5>
-                                                <p>
-                                                    <strong>Robot selected: </strong>1
-                                                </p>
-                                                <!-- <p><strong>Algorithm to test: </strong>Light follower</p> -->
-                                                 <p class="d-flex">
+                                                <p class="d-flex flex-column mb-1">
+                                                    <strong class="mb-2">Robot selected: 1</strong>
                                                     <strong>Battery status: </strong>
                                                  </p>
-                                                <!-- <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                                                    <div style="width: 100%">100%</div>
-                                                </div> -->
                                                 <div class="progress">
-                                                    <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                                    <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                                                 </div>
                                             </div>
                                         </div>
