--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -95,11 +95,18 @@
                                     <div class="col-12 col-md-6">
                                         <div class="card h-100">
                                             <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5>Robot status</h5>
-                                                <p class="d-flex flex-column mb-1">
-                                                    <strong class="mb-2">Robot selected: 1</strong>
-                                                    <strong>Battery status: </strong>
-                                                 </p>
+                                                <h5 class="mb-2">Robot status</h5>
+                                                <div class="d-flex flex-column mb-1">
+						    <div class="d-flex mb-3">
+							<span class="fw-bold me-2">Robot selected: </span>
+							<span id="robot-selected">None</span>
+						    </div>
+						    <div class="d-flex mb-3">
+							<span class="fw-bold me-2">Robot temperature: </span>
+							<span id="robot-temperature"> - -</span>
+						    </div>
+						    <span class="fw-bold mb-2">Battery status:</span>
+                                                 </div>
                                                 <div class="progress">
                                                     <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                                                 </div>
