--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -15,17 +15,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <!-- <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script> -->
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
             <a class="navbar-brand ps-4" href="https://biorobotics.fi-p.unam.mx/">Biorobotics Lab</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/recordings">Recordings</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Administrator
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/userManager">Users</a></li>
+                        <li><a class="dropdown-item" href="/fileManager">Files</a></li>
+                      </ul>
+                  </li>
+                </ul>
+            </div>
             <div class="d-flex w-100 justify-content-end">   
                 <div class="d-flex">
-                    <span class="navbar-brand m-auto me-3"><strong>User: </strong>{{ username }}</span>
+                    <span class="navbar-brand m-auto me-3"><strong>{{ username }}</strong></span>
                     <div class="d-flex align-items-center flex-column me-4">
-                        <svg class="navbar-brand m-auto" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <svg class="navbar-brand m-auto" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                         </svg>
