Add new controller

--- a/catkin_ws/src/arena_web_server/templates/home.html
+++ b/catkin_ws/src/arena_web_server/templates/home.html
@@ -120,11 +120,11 @@
                                                 <div class="d-flex flex-column mb-1">
 						    <div class="d-flex mb-3">
 							<span class="fw-bold me-2">Robot selected: </span>
-							<span id="robot-selected">None</span>
+							<span id="selected-robot">--</span>
 						    </div>
 						    <div class="d-flex mb-3">
 							<span class="fw-bold me-2">Robot temperature: </span>
-							<span id="robot-temperature"> - -</span>
+							<span id="robot-temperature">--</span>
 						    </div>
 						    <span class="fw-bold mb-2">Battery status:</span>
                                                  </div>
